# aprendizaje_maquina_II

./: .gitignore  CriteriosAprobacion.md  README.md  RepositoriosProyectos.md  propuesta_amii_2026.md  pyproject.toml  requirements_airflow.txt  requirements_amq2.txt  requirements_mlflow.txt  test.ipynb
Clase 1/: Bagging sin fun.ipynb  Boosting sin fun.ipynb  Hyperopts.ipynb  Tunning - Parte I.ipynb  Tunning Bayesiano - Parte II.ipynb  Tunning notebook general.ipynb  Venn Diagram.ipynb  Voting Classifier.ipynb  abalone.csv  preguntas.txt
Clase 1 - Ensambles y HPs/: AMq2-Tunning_Optuna.ipynb
Clase 1/Colabs/: Hyperopts.ipynb  Tunning - Parte I.ipynb  Tunning Bayesiano - Parte II.ipynb
Clase 2 - MLOps y buenas prácticas/: AMq2_buenas_practicas.ipynb  AMq2_buenas_practicas_ejercicio.py  pylint_example.py  ~$AMq2 - Clase 2 - MLOps y buenas prácticas.pptx
Clase 3/: bash_train_model.sh  bash_train_model.sh.txt  data.csv  ejercicio_sql_solucion.sql  model_fi.sav  training_pipeline.py  training_pipeline.py.txt
Clase 3 - Mlflow/: AMq2-Registro de modelos y versionado con MLFlow.ipynb  custom_model.py  mydb.sqlite
Clase 3 - Mlflow/mlflow_demo/: AMq2_mlflow_custom_model_demo.ipynb  AMq2_mlflow_demo_notebook.ipynb  mlflow_demo.py  mydb.sqlite
Clase 4/: 02_database_creation.py  03_populate_table.py  05_putting_model_in_prod.py  experiments_using_registered_models.ipynb  ml2.ipynb
Clase 4 - Logging, pruebas unitarias, custom model, git e introducción a Airflow/: AMq2-codigo_a_produccion.ipynb  add_function.py  test_add_function.py  try_except_ejemplo1.py
Clase 5/: 01_making_predictions.py  01_training.py  02_competition_pipeline.py  03_deploy_mlflow_server.sh  03_deploy_models.sh  04_bash_inference.sh  04_making_predictions.py  04_python_inference.py  05_lambda_inference.py  06_tunning.py  run_pipelines.sh  script.py.txt
Clase 5 - APIs Web apps/Model serving a través de APIs/: 01_Gradio_getting_started.py  0_Gradio_getting_started.py  1.Fundamentos FastAPI.py  2. Tutorial_fastapi_manual.py  3. API con Pycaret y FastAPI.ipynb  AMq2_demo_gradio.py  Model.py  app.py  diamond-pipeline.pkl  iris_model.pkl  test.py
Clase 6/: 00_database_connection_isolated.py  00_database_connection_psycopg2.py  00_database_connection_sqlalchemy.py  01_python_inference.py  01_python_inference_with_saving_inference.py  02_check_performance.py  04_python_inference.py  airflow_deploy.sh  database_conection.py
Clase 6 - Práctica Airflow/: databricks_job_trigger.py
Clase 7/: archivo_a_importar.py  cloud_function.txt  steps.txt
Clase 7 - Databricks, repaso TP/: argparse_demo.py  custom_transformer.py
Clase 8 - XAI/: XAI.ipynb
Extras/Monitoreo-EvidentlyAI/: evidently_metric_presets.ipynb  getting_started_tutorial.ipynb
TP - house price/src/: feature_engineering.py  inference_pipeline.py  predict.py  train.py  train_pipeline.py
clase1/: AMq2_buenas_practicas.ipynb  MLOPS1_buenas_practicas.ipynb  README.md
clase1/hands-on/: requirements.txt  svm.ipynb
clase1/jupyter_notebook/: AMq2_buenas_practicas.ipynb
clase2/: README.md
clase2/hands-on/: README.md
clase3/: README.md
clase3/hands-on/: .env  README.md  docker-compose.yml  plots.py  requirements.txt  usando_mlflow.ipynb
clase3/jupyter_notebook/: pandas_vs_numpy.ipynb  winequality-red.parquet
clase3/teoria/: clase3.pptx
clase4/hands_on/: .env  README.md  docker-compose.yaml
clase5/: README.md
clase5/hands_on/: .env  README.md  docker-compose.yaml  requirements.txt
clase6/: README.md
clase6/hands-on/: 1-usando_una_API.ipynb  2-testing_API_creada.ipynb  README.md  requirements.txt
clase6/teoria/: clase6.pptx
clase7/: README.md
clases/clase_01_intro_mlops/: README.md
clases/clase_02_notebook_a_paquete/: README.md
clases/clase_03_docker_reproducibilidad/: README.md
clases/clase_04_mlflow_tracking/: README.md
clases/clase_05_testing_validacion/: README.md
clases/clase_06_versionado_datos/: README.md
extract_pptx_pdf_presentation/: extract_presentation.py
migrations/: alembic.ini
old/clase4/: README.md
recursos/: glosario_inicial.md
tp_final/: enunciado.md  rubrica.md
(+245 files in other folders)
