[tool.poetry]
name = "aprendizaje-maquina-ii"
version = "0.1.0"
description = ""
authors = ["Facundo Adrián Lucianna <facundolucianna@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "<2"
jupyter = "^1.0.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
scipy = "^1.13.1"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
optuna = "^3.6.1"
xgboost = "^2.0.3"
torch = "^2.3.1"
torchvision = "^0.18.1"
pylint = "^3.2.3"
autopep8 = "^2.3.0"
flask = ">=2.2,<2.3"
mlflow = "^2.13.2"
streamlit = "^1.35.0"
sqlalchemy = ">=1.4.36,<2.0"
psycopg2-binary = "^2.9.9"
joblib = "^1.4.2"
boto3 = "^1.34.127"
apache-airflow = "^2.9.2"
metaflow = "^2.12.3"
redis = "^5.0.6"
uvicorn = "^0.30.1"
requests = "^2.32.3"
fastapi = "^0.111.0"
pydantic = "^2.7.4"
typing-extensions = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
