[project]
name = "aprendizaje-maquina-ii"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow>=3.0.1",
    "autopep8>=2.3.2",
    "boto3>=1.38.32",
    "fastapi>=0.115.12",
    "flask>=3.1.1",
    "ipykernel>=6.29.5",
    "joblib>=1.5.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "metaflow>=2.15.15",
    "mlflow>=2.22.1",
    "numpy>=2.2.6",
    "optuna>=4.3.0",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.5",
    "pylint>=3.3.7",
    "redis>=6.2.0",
    "requests>=2.32.3",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sqlalchemy>=1.4.54",
    "streamlit>=1.45.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "typing-extensions>=4.14.0",
    "uvicorn>=0.34.3",
    "xgboost>=3.0.2",
]
