[project]
name = "aprendizaje-maquina-ii"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.0.1",
    "autopep8>=2.3.2",
    "awswrangler>=3.12.1",
    "boto3>=1.38.32",
    "fastapi>=0.115.12",
    "flask>=3.1.1",
    "ipykernel>=6.29.5",
    "joblib>=1.5.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "metaflow>=2.15.15",
    "mlflow>=3.9",
    "numpy>=2.2.6",
    "optuna>=4.3.0",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.5",
    "pylint>=3.3.7",
    "redis>=6.2.0",
    "requests>=2.32.3",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sodapy>=2.2.0",
    "sqlalchemy>=1.4.54",
    "streamlit>=1.45.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "typing-extensions>=4.14.0",
    "ucimlrepo>=0.0.7",
    "uvicorn>=0.34.3",
    "xgboost>=3.0.2",
]

[tool.ty.environment]
extra-paths = [
    "clase1/hands-on/refactor",
    "clase2/hands-on/1-simple_case",
    "clase2/hands-on/2-simple_server",
    "clase2/hands-on/4-mini-model-service/dockerfiles/salary_app/app",
    "clase3/hands-on/container_version",
    "clase3/hands-on/local_version",
    "clase4/hands_on/local_metaflow",
    "clase4/hands_on/container_version/airflow/dags",
    "clase4/hands_on/local_version/dags",
    "clase5/hands_on/metaflow",
    "clase6/hands-on/API_example",
    "clase6/hands-on/API_example/DockerImage",
]

[tool.pyright]
extraPaths = [
    "clase1/hands-on/refactor",
    "clase2/hands-on/1-simple_case",
    "clase2/hands-on/2-simple_server",
    "clase2/hands-on/4-mini-model-service/dockerfiles/salary_app/app",
    "clase3/hands-on/container_version",
    "clase3/hands-on/local_version",
    "clase4/hands_on/local_metaflow",
    "clase4/hands_on/container_version/airflow/dags",
    "clase4/hands_on/local_version/dags",
    "clase5/hands_on/metaflow",
    "clase6/hands-on/API_example",
    "clase6/hands-on/API_example/DockerImage",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "PL"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
